crates/cuda-macros/tests/compile_fail/launch_contract_untrusted_loaders.stderr
error[E0133]: call to unsafe function `load` is unsafe and requires unsafe block
  --> tests/compile_fail/launch_contract_untrusted_loaders.rs:21:13
   |
21 |     let _ = kernels::load(context);
   |             ^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function `from_module` is unsafe and requires unsafe block
  --> tests/compile_fail/launch_contract_untrusted_loaders.rs:22:13
   |
22 |     let _ = kernels::from_module(module);
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error[E0133]: call to unsafe function `load_named` is unsafe and requires unsafe block
  --> tests/compile_fail/launch_contract_untrusted_loaders.rs:23:13
   |
23 |     let _ = kernels::load_named(context, "some-other-artifact");
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior
